// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalScreen  rendering should match to snapshot 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  enabled={true}
  keyboardVerticalOffset={0}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "height": 58.188802083333336,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#E6ECED",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 100.74479166666667,
        "justifyContent": "space-between",
        "paddingHorizontal": 64,
        "width": "100%",
      }
    }
  >
    <ForwardRef
      onPress={[Function]}
    >
      <Image
        source={
          Object {
            "default": "",
          }
        }
        style={
          Object {
            "height": 31.265625,
            "resizeMode": "contain",
            "width": 36,
          }
        }
      />
    </ForwardRef>
    <Text
      style={
        Object {
          "color": "#1F1F60",
          "fontFamily": "BananaGrotesk-Bold",
          "fontSize": 37,
          "letterSpacing": -0.14,
          "textAlign": "center",
        }
      }
    >
      Verification Code
    </Text>
    <ForwardRef
      onPress={[Function]}
    >
      <View>
        <Image
          source={
            Object {
              "default": "",
            }
          }
          style={
            Object {
              "height": 61.497400000000006,
              "resizeMode": "contain",
              "tintColor": "#7B46E4",
              "width": 34.575,
            }
          }
        />
      </View>
    </ForwardRef>
  </View>
  <Text
    style={
      Object {
        "color": "#1F1F60",
        "fontFamily": "BananaGrotesk-Light",
        "fontSize": 30,
        "letterSpacing": -0.11,
        "marginBottom": 44.29296875,
        "marginHorizontal": 114,
        "marginTop": 138.95833333333334,
        "textAlign": "center",
      }
    }
  >
    Please add verification code sent to your email.
  </Text>
  <OTPTextView
    changedTextBorder={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#1F1F60",
      }
    }
    containerStyle={
      Object {
        "flexDirection": "row",
      }
    }
    defaultValue=""
    handleTextChange={[Function]}
    inputCellLength={1}
    inputCount={6}
    keyboardType="numeric"
    offTintStyle={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DCDCE9",
      }
    }
    textInputStyle={
      Object {
        "color": "#1F1F60",
        "fontFamily": "BananaGrotesk-Bold",
        "fontSize": 61,
        "height": 93.38000000000001,
        "margin": 0,
        "marginLeft": 20,
        "padding": 0,
        "textAlign": "center",
        "width": 68,
      }
    }
    tintColor=""
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 78.1640625,
        "marginTop": 41.6875,
        "width": 448,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1F1F60",
            "fontFamily": "BananaGrotesk-Regular",
            "fontSize": 28,
          }
        }
      >
        Haven’t received code?
      </Text>
      <ClickableText
        onPress={[Function]}
        style={Object {}}
        text="Resend"
        textStyle={
          Object {
            "color": "#7B46E4",
            "fontFamily": "BananaGrotesk-Bold",
            "fontSize": 28,
          }
        }
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#7B46E4",
            "fontFamily": "BananaGrotesk-Bold",
            "fontSize": 28,
          },
          Object {
            "color": "#1F1F60",
            "marginTop": 8.684895833333334,
          },
        ]
      }
    >
      00:
      60
       sec
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 521.09375,
      }
    }
  >
    <MediumThinButton
      disabled={true}
      onPress={null}
      style={Object {}}
      title="Continue"
    />
  </View>
</KeyboardAvoidingView>
`;

exports[`ModalScreen component renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "height": 58.188802083333336,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#E6ECED",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 100.74479166666667,
        "justifyContent": "space-between",
        "paddingHorizontal": 64,
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Image
        source={
          Object {
            "default": "",
          }
        }
        style={
          Object {
            "height": 31.265625,
            "resizeMode": "contain",
            "width": 36,
          }
        }
      />
    </View>
    <Text
      style={
        Object {
          "color": "#1F1F60",
          "fontFamily": "BananaGrotesk-Bold",
          "fontSize": 37,
          "letterSpacing": -0.14,
          "textAlign": "center",
        }
      }
    >
      Verification Code
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View>
        <Image
          source={
            Object {
              "default": "",
            }
          }
          style={
            Object {
              "height": 61.497400000000006,
              "resizeMode": "contain",
              "tintColor": "#7B46E4",
              "width": 34.575,
            }
          }
        />
      </View>
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#1F1F60",
        "fontFamily": "BananaGrotesk-Light",
        "fontSize": 30,
        "letterSpacing": -0.11,
        "marginBottom": 44.29296875,
        "marginHorizontal": 114,
        "marginTop": 138.95833333333334,
        "textAlign": "center",
      }
    }
  >
    Please add verification code sent to your email.
  </Text>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={false}
      keyboardType="numeric"
      maxLength={1}
      multiline={false}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "fontSize": 22,
            "textAlign": "center",
          },
          Object {
            "color": "#1F1F60",
            "fontFamily": "BananaGrotesk-Bold",
            "fontSize": 61,
            "height": 93.38000000000001,
            "margin": 0,
            "marginLeft": 20,
            "padding": 0,
            "textAlign": "center",
            "width": 68,
          },
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DCDCE9",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={false}
      keyboardType="numeric"
      maxLength={1}
      multiline={false}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "fontSize": 22,
            "textAlign": "center",
          },
          Object {
            "color": "#1F1F60",
            "fontFamily": "BananaGrotesk-Bold",
            "fontSize": 61,
            "height": 93.38000000000001,
            "margin": 0,
            "marginLeft": 20,
            "padding": 0,
            "textAlign": "center",
            "width": 68,
          },
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DCDCE9",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={false}
      keyboardType="numeric"
      maxLength={1}
      multiline={false}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "fontSize": 22,
            "textAlign": "center",
          },
          Object {
            "color": "#1F1F60",
            "fontFamily": "BananaGrotesk-Bold",
            "fontSize": 61,
            "height": 93.38000000000001,
            "margin": 0,
            "marginLeft": 20,
            "padding": 0,
            "textAlign": "center",
            "width": 68,
          },
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DCDCE9",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={false}
      keyboardType="numeric"
      maxLength={1}
      multiline={false}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "fontSize": 22,
            "textAlign": "center",
          },
          Object {
            "color": "#1F1F60",
            "fontFamily": "BananaGrotesk-Bold",
            "fontSize": 61,
            "height": 93.38000000000001,
            "margin": 0,
            "marginLeft": 20,
            "padding": 0,
            "textAlign": "center",
            "width": 68,
          },
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DCDCE9",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={false}
      keyboardType="numeric"
      maxLength={1}
      multiline={false}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "fontSize": 22,
            "textAlign": "center",
          },
          Object {
            "color": "#1F1F60",
            "fontFamily": "BananaGrotesk-Bold",
            "fontSize": 61,
            "height": 93.38000000000001,
            "margin": 0,
            "marginLeft": 20,
            "padding": 0,
            "textAlign": "center",
            "width": 68,
          },
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DCDCE9",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={false}
      keyboardType="numeric"
      maxLength={1}
      multiline={false}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "fontSize": 22,
            "textAlign": "center",
          },
          Object {
            "color": "#1F1F60",
            "fontFamily": "BananaGrotesk-Bold",
            "fontSize": 61,
            "height": 93.38000000000001,
            "margin": 0,
            "marginLeft": 20,
            "padding": 0,
            "textAlign": "center",
            "width": 68,
          },
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DCDCE9",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 78.1640625,
        "marginTop": 41.6875,
        "width": 448,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1F1F60",
            "fontFamily": "BananaGrotesk-Regular",
            "fontSize": 28,
          }
        }
      >
        Haven’t received code?
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#7B46E4",
              "fontFamily": "BananaGrotesk-Bold",
              "fontSize": 28,
            }
          }
        >
           
          Resend
           
        </Text>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#7B46E4",
            "fontFamily": "BananaGrotesk-Bold",
            "fontSize": 28,
          },
          Object {
            "color": "#1F1F60",
            "marginTop": 8.684895833333334,
          },
        ]
      }
    >
      00:
      60
       sec
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 521.09375,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#7B46E466",
            "borderRadius": 78,
            "height": 100,
            "width": 550,
          },
          Object {},
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "BananaGrotesk-Bold",
                "fontSize": 32,
                "letterSpacing": -0.18,
                "lineHeight": 36,
              },
              Object {},
            ]
          }
        >
          Continue
        </Text>
      </View>
    </View>
  </View>
</View>
`;
